maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:18: error: not found: value etat
    etat = 0
    ^IslandMaze:24: error: not found: value etat
    etat = 1
    ^IslandMaze:30: error: not found: value etat
    etat = 0
    ^IslandMaze:41: error: not found: value etat
  etat = 1
  ^