maze.island.IslandMaze.scala.code
override def run() {
  var etat = 0
  while (!estSurBiscuit()) {
    etat match {
      case 0 => courrirNord()
      case 1 => suivreGauche()
      case _ => println("error")
    }
  }
  prendBiscuit()
}

def courrirNord() {
  setDirection(Direction.NORTH)
  if (!estFaceMur()) { 
    avance() 
    etat = 0
  } else {
		while (!estFaceMur()) {
      gauche()
    }
    droite()
    etat = 1
  }
}

def suivreGauche() {
  if (getDirection()==Direction.NORTH && !estFaceMur()) {
    etat = 0
  }
  gauche()
  if (!estFaceMur()) {
    avance()
  } else  {
    while (estFaceMur()) {
      droite()
    }
    avance()
  }
  etat = 1
}